--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <!-- groupId org.jboss.ejb3 -->
     <version.org.jboss.ejb3_jboss.ejb3.cache>1.0.0</version.org.jboss.ejb3_jboss.ejb3.cache>
     <version.org.jboss.ejb3_jboss.ejb3.common>1.0.2</version.org.jboss.ejb3_jboss.ejb3.common>
-    <version.org.jboss.ejb3_jboss.ejb3.core>1.5.0-alpha-4</version.org.jboss.ejb3_jboss.ejb3.core>
+    <version.org.jboss.ejb3_jboss.ejb3.core>1.5.0-SNAPSHOT</version.org.jboss.ejb3_jboss.ejb3.core>
     <version.org.jboss.ejb3_jboss.ejb3.deployers>1.1.5</version.org.jboss.ejb3_jboss.ejb3.deployers>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint>0.1.0</version.org.jboss.ejb3_jboss.ejb3.endpoint>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>0.1.4</version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>
@@ -67,13 +67,13 @@
     <version.org.jboss.ejb3.context>0.1.1</version.org.jboss.ejb3.context>
     <version.org.jboss.ejb3.nointerface>1.0.0-alpha-6</version.org.jboss.ejb3.nointerface>
     <version.org.jboss.ejb3.proxy>1.0.0-alpha-1</version.org.jboss.ejb3.proxy>
-    <version.org.jboss.ejb3.singleton>1.0.0-alpha-10</version.org.jboss.ejb3.singleton>
-    <version.org.jboss.ejb3.timeout>0.1.1</version.org.jboss.ejb3.timeout>
+    <version.org.jboss.ejb3.singleton>1.0.0-SNAPSHOT</version.org.jboss.ejb3.singleton>
+    <version.org.jboss.ejb3.timeout>0.2.0-SNAPSHOT</version.org.jboss.ejb3.timeout>
     <version.org.jboss.ejb3.tx2>0.0.1</version.org.jboss.ejb3.tx2>
     <version.org.jboss.ejb3.vfs>1.0.0-alpha-1</version.org.jboss.ejb3.vfs>
     
     <!-- Misc -->
-    <version.org.jboss.metadata_ejb-metadata>2.0.0-alpha-16</version.org.jboss.metadata_ejb-metadata>
+    <version.org.jboss.metadata_ejb-metadata>2.0.0-alpha-17</version.org.jboss.metadata_ejb-metadata>
     
   </properties>
 
