--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <!-- groupId org.jboss.ejb3 -->
     <version.org.jboss.ejb3_jboss.ejb3.cache>1.0.0</version.org.jboss.ejb3_jboss.ejb3.cache>
     <version.org.jboss.ejb3_jboss.ejb3.common>1.0.2</version.org.jboss.ejb3_jboss.ejb3.common>
-    <version.org.jboss.ejb3_jboss.ejb3.core>1.5.0-SNAPSHOT</version.org.jboss.ejb3_jboss.ejb3.core>
+    <version.org.jboss.ejb3_jboss.ejb3.core>1.5.0</version.org.jboss.ejb3_jboss.ejb3.core>
     <version.org.jboss.ejb3_jboss.ejb3.deployers>1.1.5</version.org.jboss.ejb3_jboss.ejb3.deployers>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint>0.1.0</version.org.jboss.ejb3_jboss.ejb3.endpoint>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>0.1.4</version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>
@@ -46,8 +46,8 @@
     <version.org.jboss.ejb3_jboss.ejb3.metadata>1.0.0</version.org.jboss.ejb3_jboss.ejb3.metadata>
     <version.org.jboss.ejb3_jboss.ejb3.metadata.deployers>1.0.0</version.org.jboss.ejb3_jboss.ejb3.metadata.deployers>
     <version.org.jboss.ejb3_jboss.ejb3.metrics.deployer>1.1.0</version.org.jboss.ejb3_jboss.ejb3.metrics.deployer>
-    <version.org.jboss.ejb3_jboss.ejb3.proxy.clustered>1.0.5-SNAPSHOT</version.org.jboss.ejb3_jboss.ejb3.proxy.clustered>
-    <version.org.jboss.ejb3_jboss.ejb3.proxy.impl>1.0.11-SNAPSHOT</version.org.jboss.ejb3_jboss.ejb3.proxy.impl>
+    <version.org.jboss.ejb3_jboss.ejb3.proxy.clustered>1.0.5-alpha-1</version.org.jboss.ejb3_jboss.ejb3.proxy.clustered>
+    <version.org.jboss.ejb3_jboss.ejb3.proxy.impl>1.0.11-alpha-1</version.org.jboss.ejb3_jboss.ejb3.proxy.impl>
     <version.org.jboss.ejb3_jboss.ejb3.proxy.spi>1.0.0</version.org.jboss.ejb3_jboss.ejb3.proxy.spi>
     <version.org.jboss.ejb3_jboss.ejb3.security>1.0.2</version.org.jboss.ejb3_jboss.ejb3.security>
     <version.org.jboss.ejb3_jboss.ejb3.timerservice.deployer>1.0.0-alpha-4</version.org.jboss.ejb3_jboss.ejb3.timerservice.deployer>
@@ -65,9 +65,10 @@
     <version.org.jboss.ejb3.concurrency>1.0.0-alpha-1</version.org.jboss.ejb3.concurrency>
     <version.org.jboss.ejb3.container>1.0.0-alpha-2</version.org.jboss.ejb3.container>
     <version.org.jboss.ejb3.context>0.1.1</version.org.jboss.ejb3.context>
+    <version.org.jboss.ejb3.instantiator>1.0.0-alpha-2</version.org.jboss.ejb3.instantiator>
     <version.org.jboss.ejb3.nointerface>1.0.0-alpha-6</version.org.jboss.ejb3.nointerface>
     <version.org.jboss.ejb3.proxy>1.0.0-alpha-1</version.org.jboss.ejb3.proxy>
-    <version.org.jboss.ejb3.singleton>1.0.0-SNAPSHOT</version.org.jboss.ejb3.singleton>
+    <version.org.jboss.ejb3.singleton>1.0.0-alpha-11</version.org.jboss.ejb3.singleton>
     <version.org.jboss.ejb3.timeout>0.2.0</version.org.jboss.ejb3.timeout>
     <version.org.jboss.ejb3.tx2>0.0.1</version.org.jboss.ejb3.tx2>
     <version.org.jboss.ejb3.vfs>1.0.0-alpha-1</version.org.jboss.ejb3.vfs>
@@ -164,6 +165,21 @@
       <groupId>org.jboss.ejb3</groupId>
       <artifactId>jboss-ejb3-interceptors</artifactId>
     </dependency>
+    
+    <!-- org.jboss.ejb3.instantiator -->
+    <dependency>
+      <groupId>org.jboss.ejb3.instantiator</groupId>
+      <artifactId>jboss-ejb3-instantiator-spi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.ejb3.instantiator</groupId>
+      <artifactId>jboss-ejb3-instantiator-impl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.ejb3.instantiator</groupId>
+      <artifactId>jboss-ejb3-instantiator-deployer</artifactId>
+    </dependency>
+    
     
     <!-- jboss-ejb3-metadata -->
     <dependency>
@@ -702,6 +718,24 @@
         <artifactId>jboss-ejb3-context-naming</artifactId>
         <version>${version.org.jboss.ejb3.context}</version>
       </dependency>
+
+    <!-- org.jboss.ejb3.instantiator -->
+    <dependency>
+        <groupId>org.jboss.ejb3.instantiator</groupId>
+        <artifactId>jboss-ejb3-instantiator-spi</artifactId>
+        <version>${version.org.jboss.ejb3.instantiator}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jboss.ejb3.instantiator</groupId>
+        <artifactId>jboss-ejb3-instantiator-impl</artifactId>
+        <version>${version.org.jboss.ejb3.instantiator}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.jboss.ejb3.instantiator</groupId>
+        <artifactId>jboss-ejb3-instantiator-deployer</artifactId>
+        <version>${version.org.jboss.ejb3.instantiator}</version>
+    </dependency>
+      
 
       <dependency>
         <groupId>org.jboss.ejb3.nointerface</groupId>
