--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
     <version.org.jboss.ejb3.concurrency>1.0.0-alpha-1</version.org.jboss.ejb3.concurrency>
     <version.org.jboss.ejb3.container>1.0.0-alpha-2</version.org.jboss.ejb3.container>
     <version.org.jboss.ejb3.context>0.1.1</version.org.jboss.ejb3.context>
+    <version.org.jboss.ejb3.ejbref.resolver>1.0.0-alpha-1</version.org.jboss.ejb3.ejbref.resolver>
     <version.org.jboss.ejb3.instantiator>1.0.0-alpha-2-SNAPSHOT</version.org.jboss.ejb3.instantiator>
     <version.org.jboss.ejb3.nointerface>1.0.0-alpha-6</version.org.jboss.ejb3.nointerface>
     <version.org.jboss.ejb3.proxy>1.0.0-alpha-1</version.org.jboss.ejb3.proxy>
@@ -140,6 +141,17 @@
     <dependency>
       <groupId>org.jboss.ejb3</groupId>
       <artifactId>jboss-ejb3-deployers</artifactId>
+    </dependency>
+    
+    <!-- ejbref-resolver -->
+    <dependency>
+        <groupId>org.jboss.ejb3.ejbref.resolver</groupId>
+        <artifactId>ejbref-resolver-spi</artifactId>
+    </dependency>
+
+    <dependency>
+        <groupId>org.jboss.ejb3.ejbref.resolver</groupId>
+        <artifactId>ejbref-resolver-ejb31-impl</artifactId>
     </dependency>
     
     <!-- jboss-ejb3-endpoint -->
@@ -475,6 +487,19 @@
         <artifactId>jboss-ejb3-deployers</artifactId>
         <version>${version.org.jboss.ejb3_jboss.ejb3.deployers}</version>
       </dependency>
+
+        <!-- ejbref-resolver -->
+        <dependency>
+            <groupId>org.jboss.ejb3.ejbref.resolver</groupId>
+            <artifactId>ejbref-resolver-spi</artifactId>
+            <version>${version.org.jboss.ejb3.ejbref.resolver}</version>
+        </dependency>
+    
+        <dependency>
+            <groupId>org.jboss.ejb3.ejbref.resolver</groupId>
+            <artifactId>ejbref-resolver-ejb31-impl</artifactId>
+            <version>${version.org.jboss.ejb3.ejbref.resolver}</version>
+        </dependency>
 
       <dependency>
         <groupId>org.jboss.ejb3</groupId>
