--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
     <version.org.jboss.ejb3.instantiator>1.0.0-alpha-2</version.org.jboss.ejb3.instantiator>
     <version.org.jboss.ejb3.nointerface>1.0.0-alpha-7</version.org.jboss.ejb3.nointerface>
     <version.org.jboss.ejb3.proxy>1.0.0-alpha-1</version.org.jboss.ejb3.proxy>
-    <version.org.jboss.ejb3.singleton>1.0.0-alpha-14-SNAPSHOT</version.org.jboss.ejb3.singleton>
+    <version.org.jboss.ejb3.singleton>1.0.0-alpha-14</version.org.jboss.ejb3.singleton>
     <version.org.jboss.ejb3.timeout>0.2.1</version.org.jboss.ejb3.timeout>
     <version.org.jboss.ejb3.tx2>0.0.1</version.org.jboss.ejb3.tx2>
     <version.org.jboss.ejb3.vfs>1.0.0-alpha-1</version.org.jboss.ejb3.vfs>
