--- a/pom.xml
+++ b/pom.xml
@@ -430,6 +430,12 @@
         <groupId>org.jboss.ejb3</groupId>
         <artifactId>jboss-ejb3-core</artifactId>
         <version>${version.org.jboss.ejb3_jboss.ejb3.core}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
