EJBTHREE-2173: exclude org.hibernate:hibernate-annotations from ejb3-core:client as well

--- a/pom.xml
+++ b/pom.xml
@@ -450,6 +450,10 @@
             <artifactId>hibernate</artifactId>
           </exclusion>
           <exclusion>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+          </exclusion>
+          <exclusion>
             <groupId>org.jboss</groupId>
             <artifactId>jboss-metadata</artifactId>
           </exclusion>
