--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,10 @@
        share release cycle/version)
      -->
     <version.org.jboss.ejb3.async>1.0.0-alpha-5</version.org.jboss.ejb3.async>
-    <version.org.jboss.ejb3.concurrency>1.0.0-SNAPSHOT</version.org.jboss.ejb3.concurrency>
+    <version.org.jboss.ejb3.concurrency>1.0.0-alpha-2</version.org.jboss.ejb3.concurrency>
     <version.org.jboss.ejb3.container>1.0.0-alpha-2</version.org.jboss.ejb3.container>
     <version.org.jboss.ejb3.context>0.1.1</version.org.jboss.ejb3.context>
-    <version.org.jboss.ejb3.ejbref.resolver>1.0.0-alpha-4-SNAPSHOT</version.org.jboss.ejb3.ejbref.resolver>
+    <version.org.jboss.ejb3.ejbref.resolver>1.0.0-alpha-4</version.org.jboss.ejb3.ejbref.resolver>
     <version.org.jboss.ejb3.instantiator>1.0.0-alpha-2</version.org.jboss.ejb3.instantiator>
     <version.org.jboss.ejb3.jndibinder>0.1.2</version.org.jboss.ejb3.jndibinder>
     <version.org.jboss.ejb3.nointerface>1.0.0-alpha-9</version.org.jboss.ejb3.nointerface>
