--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <!-- Artifact Configuration -->
   <groupId>org.jboss.ejb3.depchain</groupId>
   <artifactId>jboss-ejb3-depchain-as6</artifactId>
-  <version>1.0.0-alpha-20-SNAPSHOT</version>
+  <version>1.0.0-alpha-20</version>
   <name>JBoss EJB 3.x Dependency Chain for AS6</name>
   <description>Dependency Chain for EJB 3.x in JBoss Application Server 6</description>
   <packaging>pom</packaging>
@@ -68,7 +68,7 @@
     <version.org.jboss.ejb3.effigy>0.1.0</version.org.jboss.ejb3.effigy>
     <version.org.jboss.ejb3.ejbref.resolver>1.0.0-alpha-4</version.org.jboss.ejb3.ejbref.resolver>
     <version.org.jboss.ejb3.instantiator>1.0.0-alpha-4</version.org.jboss.ejb3.instantiator>
-    <version.org.jboss.ejb3.jndibinder>0.1.3</version.org.jboss.ejb3.jndibinder>
+    <version.org.jboss.ejb3.jndibinder>0.1.4</version.org.jboss.ejb3.jndibinder>
     <version.org.jboss.ejb3.nointerface>1.0.0-alpha-9</version.org.jboss.ejb3.nointerface>
     <version.org.jboss.ejb3.proxy>1.0.0-alpha-1</version.org.jboss.ejb3.proxy>
     <version.org.jboss.ejb3.singleton>1.0.0-alpha-16</version.org.jboss.ejb3.singleton>
@@ -78,7 +78,7 @@
     <version.org.jboss.ejb3.vfs>1.0.0-alpha-1</version.org.jboss.ejb3.vfs>
     
     <!-- Misc -->
-    <version.org.jboss.metadata_ejb-metadata>2.0.0-alpha-23</version.org.jboss.metadata_ejb-metadata>
+    <version.org.jboss.metadata_ejb-metadata>2.0.0-alpha-22</version.org.jboss.metadata_ejb-metadata>
     
   </properties>
 
