--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
     <version.org.jboss.ejb3.async>1.0.0-alpha-5</version.org.jboss.ejb3.async>
     <version.org.jboss.ejb3.concurrency>1.0.0-alpha-3</version.org.jboss.ejb3.concurrency>
     <version.org.jboss.ejb3.container>1.0.0-alpha-2</version.org.jboss.ejb3.container>
-    <version.org.jboss.ejb3.context>0.1.1</version.org.jboss.ejb3.context>
+    <version.org.jboss.ejb3.context>0.3.0-SNAPSHOT</version.org.jboss.ejb3.context>
     <version.org.jboss.ejb3.effigy>0.1.0</version.org.jboss.ejb3.effigy>
     <version.org.jboss.ejb3.ejbref.resolver>1.0.0-alpha-4</version.org.jboss.ejb3.ejbref.resolver>
     <version.org.jboss.ejb3.heks>0.1.0-SNAPSHOT</version.org.jboss.ejb3.heks>
@@ -782,6 +782,11 @@
       <dependency>
         <groupId>org.jboss.ejb3.context</groupId>
         <artifactId>jboss-ejb3-context-naming</artifactId>
+        <version>${version.org.jboss.ejb3.context}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jboss.ejb3.context</groupId>
+        <artifactId>jboss-ejb3-context-spi</artifactId>
         <version>${version.org.jboss.ejb3.context}</version>
       </dependency>
 
