--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
     <version.org.jboss.ejb3.context>0.3.0</version.org.jboss.ejb3.context>
     <version.org.jboss.ejb3.effigy>0.1.0</version.org.jboss.ejb3.effigy>
     <version.org.jboss.ejb3.ejbref.resolver>1.0.0-alpha-4</version.org.jboss.ejb3.ejbref.resolver>
-    <version.org.jboss.ejb3.heks>0.1.0</version.org.jboss.ejb3.heks>
+    <version.org.jboss.ejb3.heks>0.1.1-SNAPSHOT</version.org.jboss.ejb3.heks>
     <version.org.jboss.ejb3.instantiator>1.0.0-alpha-4</version.org.jboss.ejb3.instantiator>
     <version.org.jboss.ejb3.jndibinder>0.1.4</version.org.jboss.ejb3.jndibinder>
     <version.org.jboss.ejb3.nointerface>1.0.0-alpha-9</version.org.jboss.ejb3.nointerface>
