--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <!-- Artifact Configuration -->
   <groupId>org.jboss.ejb3.depchain</groupId>
   <artifactId>jboss-ejb3-depchain-as6</artifactId>
-  <version>1.0.0-alpha-32-SNAPSHOT</version>
+  <version>1.0.0-async-alpha-32-SNAPSHOT</version>
   <name>JBoss EJB 3.x Dependency Chain for AS6</name>
   <description>Dependency Chain for EJB 3.x in JBoss Application Server 6</description>
   <packaging>pom</packaging>
@@ -34,7 +34,7 @@
     <!-- groupId org.jboss.ejb3 -->
     <version.org.jboss.ejb3_jboss.ejb3.cache>1.0.0</version.org.jboss.ejb3_jboss.ejb3.cache>
     <version.org.jboss.ejb3_jboss.ejb3.common>1.0.2</version.org.jboss.ejb3_jboss.ejb3.common>
-    <version.org.jboss.ejb3_jboss.ejb3.core>1.7.10</version.org.jboss.ejb3_jboss.ejb3.core>
+    <version.org.jboss.ejb3_jboss.ejb3.core>1.7.11-SNAPSHOT</version.org.jboss.ejb3_jboss.ejb3.core>
     <version.org.jboss.ejb3_jboss.ejb3.deployers>1.1.5</version.org.jboss.ejb3_jboss.ejb3.deployers>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint>0.1.0</version.org.jboss.ejb3_jboss.ejb3.endpoint>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>0.1.4</version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>
@@ -61,7 +61,7 @@
        EJB3 Components (org.jboss.ejb3.* > all artifacts for a groupId
        share release cycle/version)
      -->
-    <version.org.jboss.ejb3.async>1.0.0-alpha-7</version.org.jboss.ejb3.async>
+    <version.org.jboss.ejb3.async>1.0.0-alpha-8-SNAPSHOT</version.org.jboss.ejb3.async>
     <version.org.jboss.ejb3.concurrency>1.0.0-alpha-4</version.org.jboss.ejb3.concurrency>
     <version.org.jboss.ejb3.container>1.0.0-alpha-2</version.org.jboss.ejb3.container>
     <version.org.jboss.ejb3.context>0.3.0</version.org.jboss.ejb3.context>
@@ -70,9 +70,10 @@
     <version.org.jboss.ejb3.heks>0.1.1</version.org.jboss.ejb3.heks>
     <version.org.jboss.ejb3.instantiator>1.0.0-alpha-4</version.org.jboss.ejb3.instantiator>
     <version.org.jboss.ejb3.jndibinder>0.1.4</version.org.jboss.ejb3.jndibinder>
-    <version.org.jboss.ejb3.nointerface>1.0.0-alpha-9</version.org.jboss.ejb3.nointerface>
+    <version.org.jboss.ejb3.nointerface>1.0.0-alpha-10-SNAPSHOT</version.org.jboss.ejb3.nointerface>
     <version.org.jboss.ejb3.proxy>1.0.0-alpha-1</version.org.jboss.ejb3.proxy>
     <version.org.jboss.ejb3.singleton>1.0.0-alpha-23</version.org.jboss.ejb3.singleton>
+    <version.org.jboss.ejb3.sis>1.0.0-alpha-1</version.org.jboss.ejb3.sis>
     <version.org.jboss.ejb3.statefulcache>1.0.0-alpha-4</version.org.jboss.ejb3.statefulcache>
     <version.org.jboss.ejb3.timeout>0.2.1</version.org.jboss.ejb3.timeout>
     <version.org.jboss.ejb3.tx2>0.0.1</version.org.jboss.ejb3.tx2>
@@ -253,6 +254,12 @@
     <dependency>
       <groupId>org.jboss.ejb3</groupId>
       <artifactId>jboss-ejb3-security</artifactId>
+    </dependency>
+
+    <!-- jboss-ejb3-sis -->
+    <dependency>
+      <groupId>org.jboss.ejb3.sis</groupId>
+      <artifactId>jboss-ejb3-sis</artifactId>
     </dependency>
 
     <!-- jboss-ejb3-timerservice-deployer -->
@@ -862,6 +869,12 @@
         <artifactId>proxy-javassist</artifactId>
         <version>${version.org.jboss.ejb3.proxy}</version>
       </dependency>
+
+    <dependency>
+      <groupId>org.jboss.ejb3.sis</groupId>
+      <artifactId>jboss-ejb3-sis</artifactId>
+      <version>${version.org.jboss.ejb3.sis}</version>
+    </dependency>
 
 	<!-- EJB3.1 singleton modules -->
     <dependency>
