--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <!-- groupId org.jboss.ejb3 -->
     <version.org.jboss.ejb3_jboss.ejb3.cache>1.0.0</version.org.jboss.ejb3_jboss.ejb3.cache>
     <version.org.jboss.ejb3_jboss.ejb3.common>1.0.2</version.org.jboss.ejb3_jboss.ejb3.common>
-    <version.org.jboss.ejb3_jboss.ejb3.core>1.7.11-SNAPSHOT</version.org.jboss.ejb3_jboss.ejb3.core>
+    <version.org.jboss.ejb3_jboss.ejb3.core>1.7.11</version.org.jboss.ejb3_jboss.ejb3.core>
     <version.org.jboss.ejb3_jboss.ejb3.deployers>1.1.5</version.org.jboss.ejb3_jboss.ejb3.deployers>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint>0.1.0</version.org.jboss.ejb3_jboss.ejb3.endpoint>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>0.1.4</version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>
@@ -61,7 +61,7 @@
        EJB3 Components (org.jboss.ejb3.* > all artifacts for a groupId
        share release cycle/version)
      -->
-    <version.org.jboss.ejb3.async>1.0.0-alpha-8-SNAPSHOT</version.org.jboss.ejb3.async>
+    <version.org.jboss.ejb3.async>1.0.0-alpha-8</version.org.jboss.ejb3.async>
     <version.org.jboss.ejb3.concurrency>1.0.0-alpha-4</version.org.jboss.ejb3.concurrency>
     <version.org.jboss.ejb3.container>1.0.0-alpha-2</version.org.jboss.ejb3.container>
     <version.org.jboss.ejb3.context>0.3.0</version.org.jboss.ejb3.context>
@@ -70,7 +70,7 @@
     <version.org.jboss.ejb3.heks>0.1.1</version.org.jboss.ejb3.heks>
     <version.org.jboss.ejb3.instantiator>1.0.0-alpha-4</version.org.jboss.ejb3.instantiator>
     <version.org.jboss.ejb3.jndibinder>0.1.4</version.org.jboss.ejb3.jndibinder>
-    <version.org.jboss.ejb3.nointerface>1.0.0-alpha-10-SNAPSHOT</version.org.jboss.ejb3.nointerface>
+    <version.org.jboss.ejb3.nointerface>1.0.0-alpha-10</version.org.jboss.ejb3.nointerface>
     <version.org.jboss.ejb3.proxy>1.0.0-alpha-1</version.org.jboss.ejb3.proxy>
     <version.org.jboss.ejb3.singleton>1.0.0-alpha-23</version.org.jboss.ejb3.singleton>
     <version.org.jboss.ejb3.sis>1.0.0-alpha-1</version.org.jboss.ejb3.sis>
