--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
   <!-- Artifact Configuration -->
   <groupId>org.jboss.ejb3.depchain</groupId>
   <artifactId>jboss-ejb3-depchain-as6</artifactId>
-  <version>1.0.0-async-alpha-33-SNAPSHOT</version>
+  <version>1.0.0-alpha-33-SNAPSHOT</version>
   <name>JBoss EJB 3.x Dependency Chain for AS6</name>
   <description>Dependency Chain for EJB 3.x in JBoss Application Server 6</description>
   <packaging>pom</packaging>
@@ -34,7 +34,7 @@
     <!-- groupId org.jboss.ejb3 -->
     <version.org.jboss.ejb3_jboss.ejb3.cache>1.0.0</version.org.jboss.ejb3_jboss.ejb3.cache>
     <version.org.jboss.ejb3_jboss.ejb3.common>1.0.2</version.org.jboss.ejb3_jboss.ejb3.common>
-    <version.org.jboss.ejb3_jboss.ejb3.core>1.7.12-SNAPSHOT</version.org.jboss.ejb3_jboss.ejb3.core>
+    <version.org.jboss.ejb3_jboss.ejb3.core>1.7.12</version.org.jboss.ejb3_jboss.ejb3.core>
     <version.org.jboss.ejb3_jboss.ejb3.deployers>1.1.5</version.org.jboss.ejb3_jboss.ejb3.deployers>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint>0.1.0</version.org.jboss.ejb3_jboss.ejb3.endpoint>
     <version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>0.1.4</version.org.jboss.ejb3_jboss.ejb3.endpoint.deployer>
@@ -61,7 +61,7 @@
        EJB3 Components (org.jboss.ejb3.* > all artifacts for a groupId
        share release cycle/version)
      -->
-    <version.org.jboss.ejb3.async>1.0.0-alpha-9-SNAPSHOT</version.org.jboss.ejb3.async>
+    <version.org.jboss.ejb3.async>1.0.0-alpha-9</version.org.jboss.ejb3.async>
     <version.org.jboss.ejb3.concurrency>1.0.0-alpha-4</version.org.jboss.ejb3.concurrency>
     <version.org.jboss.ejb3.container>1.0.0-alpha-2</version.org.jboss.ejb3.container>
     <version.org.jboss.ejb3.context>0.3.0</version.org.jboss.ejb3.context>
